updated to use jbel to generate Java 8 code